@@ -1,3 +1,7 @@
+drkns 04.11.2016 00:29:33 +0200 - build 4832
+
+1. Уточнение 4831.
+
 zg 31.10.2016 20:55:32 +0200 - build 4831
 
 1. 0003337: Не восстанавливается заголовок консоли, начиная c 4809.
